			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2581 2004/04/02 11:02:11 suz Exp $

<200404>

<200403>
Fri Apr  2 17:35:45 JST 2004 sakane@kame.net
	* kame/sys/netkey/key.c:
	fixed that a memory leak happend in the case that the compile
	option, IPSEC_DOSEQCHECK was defined and called key_update().

Fri Apr  2 16:27:00 JST 2004 sakane@kame.net
	* kame/kame/tcpdump/print-isakmp.c:
	fixed that there was a possibility tcpdump(8) fell into infinite loop. 
	and the problem was at print-isakmp.c, so racoon also fell into it
	when the debug option was used.

2004-04-02  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* netbsd/sys/netinet/udp_usrreq.c
	code cleanup: uses a per-socket/interface MSF-check function
	implemented at Feb 6 2004.

	* freebsd4/sys/netinet/udp_usrreq.c, kame/sys/netinet/in_msf.[ch]
	code cleanup: implemented a per-socket/interface MSF-check 
	function for IPv4, like the above one

2004-04-02  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* freebsd[45]/sys/netinet/igmp.c
	fixed a freebsd-specific bug that IGMPv3 Query is ignored, due to 
	a endian problem within kernel.
	ToDo: code refinement to share IGMPv3 codes among *BSDs.

Mar 31 JST 2004  itojun@iijlab.net
	* *bsd*/sys/netinet*/udp*_usrreq.c: forbid IPv6 UDP packet without
	  checksum.  found by keiichi@kame.net

Wed Mar 31 15:47:19 JST 2004 sakane@kame.net
	* kame/kame/racoon/isakmp.c:
	fixed a critical bug in the case of FreeBSD.  racoon will reject
	the packet in which the value of the length field is too big.
	however the problem is due to malloc(3) of FreeBSD.

2004-03-29  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* freebsd[45]/sys/netinet/in.c, kame/sys/netinet6/mldv2.c
	fixed a kernel crash when an IGMPv3/MLDv2 Advanced-API function
	is used. (specific to IGMPv3/MLDv2-ready freebsd[45] kernel)

2004-03-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: added experimental support for the lifetime
	option based on draft-ietf-dhc-lifetime-00.txt.  dhcp6c now