@@ -1,5 +1,5 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2581 2004/04/02 11:02:11 suz Exp $
+$KAME: CHANGELOG,v 1.2582 2004/04/02 11:16:18 suz Exp $
 
 <200404>
 
@@ -20,7 +20,8 @@ Fri Apr  2 16:27:00 JST 2004 sakane@kame.net
 	code cleanup: uses a per-socket/interface MSF-check function
 	implemented at Feb 6 2004.
 
-	* freebsd4/sys/netinet/udp_usrreq.c, kame/sys/netinet/in_msf.[ch]
+	* {freebsd4,netbsd}/sys/netinet/udp_usrreq.c,
+	  kame/sys/netinet/in_msf.[ch]
 	code cleanup: implemented a per-socket/interface MSF-check 
 	function for IPv4, like the above one
 
